# wrap

./: .flake8  LICENSE  Makefile  README.md  pyproject.toml
.github/workflows/: main.yml
examples/: demo.py
src/python_project/: __init__.py  example_file.py  skip_some_warnings.py
tests/: test_sample.py
